# inferencache

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cache_tester.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: dashboard-redesign-spec.md  generative-reuse-spec.md  multi-tier-caching-architecture.md  promptcache-proxy-implementation.md  repo-organization-playbook.md  temporal-validity-spec.md
scripts/: build-dashboard.sh  ensure-site-dir.sh
src/inferencache/: __init__.py  adapt.py  adapt_clients.py  analytics.py  api.py  cli.py  embed.py  engine.py  paths.py  prefix.py  router.py  session.py  store.py  ttl.py
src/inferencache/mcp/: __init__.py  server.py  tools.py
src/inferencache/proxy/: __init__.py  forward.py  intercept.py  server.py  state.py
src/inferencache/proxy/control/: __init__.py  analyze.py  db.py  models.py  router.py  runner.py
src/inferencache/proxy/data/experiment_presets/: tier_a_calibration.json  tier_d_model_validation.json
src/inferencache/proxy/data/prompt_suites/: general_qa.json
src/promptcache/: __init__.py  analytics.py  api.py  cli.py  embed.py  engine.py  store.py
src/promptcache/mcp/: __init__.py  server.py  tools.py
src/promptcache/proxy/: __init__.py  forward.py  server.py  state.py
src/promptcache/proxy/control/: db.py  router.py  runner.py
src/promptcache/proxy/data/experiment_presets/: tier_b_threshold_sweep.json  tier_c_warm_cache.json
src/promptcache/proxy/data/prompt_suites/: coding.json  summarization.json
tests/: test_adapt.py  test_analytics.py  test_api.py  test_cli.py  test_embed.py  test_engine.py  test_engine_ttl.py  test_forward.py  test_generative.py  test_mcp.py  test_prefix.py  test_proxy_server.py  test_proxy_stream.py  test_router.py  test_session.py  test_store.py  test_stream.py  test_ttl.py
